RESOLVED FIXED133386
Loading <object> from WebArchive crashes
https://bugs.webkit.org/show_bug.cgi?id=133386
Summary Loading <object> from WebArchive crashes
Alexey Proskuryakov
Reported 2014-05-29 13:15:41 PDT
If there is an <object> in WebArchive, loading from it causes a crash. <rdar://problem/13345509>
Attachments
proposed fix (6.46 KB, patch)
2014-05-29 13:47 PDT, Alexey Proskuryakov
beidson: review+
Alexey Proskuryakov
Comment 1 2014-05-29 13:47:54 PDT
Created attachment 232262 [details] proposed fix
Alexey Proskuryakov
Comment 2 2014-05-29 16:05:32 PDT
Note You need to log in before you can comment on or make changes to this bug.