Loading <object> from WebArchive crashes https://bugs.webkit.org/show_bug.cgi?id=133386 <rdar://problem/13345509>

Reviewed by Brady Eidson.


Source/WebCore:
Test: webarchive/loading/object.html

This (a) fixes the crash, and (b) avoids the crash.

* loader/DocumentLoader.cpp: (WebCore::DocumentLoader::continueAfterContentPolicy):
Some types of substitute data - such as WebArchive - don't contain HTTP result codes,
so let's not drop to <object> fallback content when status is 0.
And if the load somehow failed anyway, don't crash by trying to deliver substitute data
to a finished loader.

LayoutTests:
* webarchive/loading/object-expected.txt: Added.
* webarchive/loading/object.html: Added.
* webarchive/loading/resources/object.webarchive: Added.



Canonical link: https://commits.webkit.org/151418@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169472 268f45cc-cd09-0410-ab3c-d52691b4dbfc